# flammkuchen

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflow/: deny.yml  formatter.yml
.github/workflows/: linter.yml  msrv.yml
src/: lib.rs  sparse_grid.rs
